fix frontpage button mobile vertical margin

--- a/themes/vue/source/css/index.styl
+++ b/themes/vue/source/css/index.styl
@@ -311,6 +311,8 @@ html, body
             width 260px
             font-size .8em
             margin .5em 0
+        a.small-button
+            margin .3em 0
         .desc
             max-width 300px
         .warning, .desc
